--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/title_activity_main" />
+
         <activity
             android:name=".ui.activities.SplashScreenActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar">
@@ -22,6 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.activities.PostDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".ui.activities.ProjectDetailsActivity"
+            android:label="@string/title_activity_project_details"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
