--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activities.MainActivity"
-            android:label="@string/title_activity_main" />
+            android:label="@string/app_name" />
 
         <activity
             android:name=".ui.activities.SplashScreenActivity"
